do some change to customization my blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
       <h1><a href="http://{{site.username}}.github.io/StrayBirds/">{{site.title}}</a></h1>
-        <p>人生到处知何似 应似飞鸿踏雪泥</p>
+        <p>小人本住在 苏州的城外 家里有屋又有田 生活乐无边</p>
         <p class="view"><a href="https://github.com/{{site.username}}/StrayBirds">View the Project on GitHub <small>{{site.username}}/StrayBirds</small></a></p>
         <ul>
           <li><a href="https://github.com/{{site.username}}/StrayBirds/tree/gh-pages">View On <strong>GitHub</strong></a></li>
@@ -39,7 +39,6 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
