--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,10 @@
       <header>
       <h1><a href="http://{{site.username}}.github.io/blog/">{{site.title}}</a></h1>
         <p>小人本住在 苏州的城外 家里有屋又有田 生活乐无边</p>
-        <p class="view"><a href="https://github.com/{{site.username}}/StrayBirds">View the Project on GitHub <small>{{site.username}}/StrayBirds</small></a></p>
+        <p class="view"><a href="http://{{site.username}}.github.io/blog/">Back to home <small>{{site.username}}/blog</small></a></p>
+        <ul>
+          <li><a href="http://{{site.username}}.github.io/blog/">Back To <strong>Home</strong></a></li>
+        </ul>
       </header>
       <section>
         <h1>
