--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
+      <p><a href="http://{{site.username}}.github.io/blog/">Back to Home</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
