modify the link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1><a href="http://www.soft.dog/">{{site.title}}</a></h1>
+      <h1><a href="http://soft.dog/">{{site.title}}</a></h1>
         <p>小人本住在 苏州的城外 家里有屋又有田 生活乐无边</p>
-        <p class="view"><a href="http://www.soft.dog/">Back to home <small>{{site.username}}/blog</small></a></p>
+        <p class="view"><a href="http://soft.dog/">Back to home <small>{{site.username}}/blog</small></a></p>
         <ul>
-          <li><a href="http://www.soft.dog/">Back To <strong>Home</strong></a></li>
+          <li><a href="http://soft.dog/">Back To <strong>Home</strong></a></li>
         </ul>
       </header>
       <section>
@@ -39,7 +39,7 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
-      <p><a href="http://www.soft.dog/">Back to Home</a></p>
+      <p><a href="http://soft.dog/">Back to Home</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
