--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <header>
       <h1><a href="http://soft.dog/">{{site.title}}</a></h1>
         <p>小人本住在 苏州的城外 家里有屋又有田 生活乐无边</p>
-        <p class="view"><a href="http://soft.dog/">Back to home <small>{{site.username}}/blog</small></a></p>
+        <p class="view"><a href="http://soft.dog/">Back to home </a></p>
         <ul>
           <li><a href="http://soft.dog/">Back To <strong>Home</strong></a></li>
         </ul>
