do some test and add  2015-08-22-temp-blog-name.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       </section>
     </div>
     <footer>
-      <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
+      <p>Blog maintained by <strong>{{site.username}}</strong></p>
       <p><a href="http://soft.dog/">Back to Home</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
