--- a/static/css/index.css
+++ b/static/css/index.css
@@ -172,6 +172,11 @@ nav{
 	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 }
+
+
+/*礼结阴影效果*/
+
+/*
 .shadow-corner-curl:before{
 	content:"";
 	position: absolute;
@@ -185,14 +190,17 @@ nav{
 	-moz-box-shadow: 0 8px 20px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 8px 20px rgba(0,0,0,0.6);
 	box-shadow: 0 8px 20px rgba(0,0,0,0.6);
-
+*/
 	/* 向左倾斜12度，再旋转4度 */
+/*
 	-webkit-transform:skew(-11deg) rotate(-4deg);
 	-moz-transform:skew(-11deg) rotate(-4deg);
 	-o-transform:skew(-11deg) rotate(-4deg);
 	-ms-transform:skew(-11deg) rotate(-4deg);
 	transform:skew(-11deg) rotate(-4deg);
 }
+*/
+/*
 .shadow-corner-curl:after{
 	content:"";
 	position: absolute;
@@ -206,14 +214,18 @@ nav{
 	-moz-box-shadow: 0 8px 20px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 8px 20px rgba(0,0,0,0.6);
 	box-shadow: 0 8px 20px rgba(0,0,0,0.6);
-
+*/
 	/* 向左倾斜12度，再旋转4度 */
+/*
 	-webkit-transform:skew(11deg) rotate(4deg);
 	-moz-transform:skew(11deg) rotate(4deg);
 	-o-transform:skew(11deg) rotate(4deg);
 	-ms-transform:skew(11deg) rotate(4deg);
 	transform:skew(11deg) rotate(4deg);
 }
+
+*/
+
 
 /* footer */
 footer{
