--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,8 +3,8 @@
  */
 /* commom */
 body {
-	background-image: url(http://7q5cdt.com1.z0.glb.clouddn.com/bg-canvas_bg.jpg);
-    font-family: 'Microsoft YaHei', 'Helvetica','Arial','SimHei', sans-serif;
+	background-image: url(../pics/canvas_bg.jpg);
+        font-family: 'Microsoft YaHei', 'Helvetica','Arial','SimHei', sans-serif;
 }
 article p{
 	/*text-indent: 2em;*/
