--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 	
 	<!--<link rel="stylesheet" type="text/css" href="{{"/static/css/bootstrap.min.css" | prepend: site.baseurl }}"> --> 
 	<!--<link rel="stylesheet" type="text/css" href="{{ "/static/css/bootstrap.min.css" | prepend: site.baseurl }}">-->
-	<link rel="stylesheet" type="text/css" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
-	<!--<link rel="stylesheet" type="text/css" href="{{ "/static/css/bootstrap.min.css" | prepend: site.baseurl }}">-->
+	<!-- xxxxx<link rel="stylesheet" type="text/css" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">-->
+	<link rel="stylesheet" type="text/css" href="{{ "/static/css/bootstrap.min.css" | prepend: site.baseurl }}">
 	<!-- <link rel="stylesheet" type="text/css" href="{{"/static/css/bootstrap_noicon.min.css" | prepend: site.baseurl }}"> --> 
 	
 
@@ -22,8 +22,8 @@
 
 	<!--<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>-->
 	<script type="text/javascript" src="{{"/static/js/jquery.min.js" | prepend:site.baseurl}}"></script>
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-	<!--<script type="text/javascript" src="{{"/static/js/bootstrap.min.js" | prepend:site.baseurl}}"></script>-->
+	<!--xxxxxxx<script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>-->
+	<script type="text/javascript" src="{{"/static/js/bootstrap.min.js" | prepend:site.baseurl}}"></script>
 
 	<script type="text/javascript" src="{{"/static/js/index.js" | prepend:site.baseurl}}"></script>
 	
@@ -36,14 +36,17 @@
 	<script type="text/javascript" src="{{"/static/js/highlight.min.js" | prepend:site.baseurl}}"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 
+
+        <!-- baidu statatics -->
 	<script>
 	var _hmt = _hmt || [];
 	(function() {
-	  var hm = document.createElement("script");
-	  hm.src = "//hm.baidu.com/hm.js?b636473d6ffa17615f94e5db1459ea81";
-	  var s = document.getElementsByTagName("script")[0]; 
-	  s.parentNode.insertBefore(hm, s);
+  	var hm = document.createElement("script");
+  	hm.src = "//hm.baidu.com/hm.js?6215ece267ead9b404f056b769dac482";
+  	var s = document.getElementsByTagName("script")[0]; 
+  	s.parentNode.insertBefore(hm, s);
 	})();
 	</script>
+
 
 </head>
