--- a/static/css/index.css
+++ b/static/css/index.css
@@ -275,11 +275,12 @@ footer .point{
 .post img{
 	max-width: 100%;
     vertical-align: middle;
-
+/*  no shadow 
 	-webkit-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
 	-moz-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
 	-o-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
 	box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+*/
 }
 /**
  * Blockquotes
