add stat to _includes/footer.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,12 +17,13 @@
           </a>
           
           {% endif %}
-          <span class="point"> · </span>
-          <!--<span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
-          <span class="point"> · </span>
-	  -->
+	  <span class="point"> . </span>
           <span>{{ site.description }}</span>
-	  <span class="point"> · </span>
+          <span class="point"> . </span>
+	  <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+	  <span id="busuanzi_container_site_pv">访问量<span id="busuanzi_value_site_pv"></span>次</span>
+	  <span id="busuanzi_container_site_uv">访客数<span id="busuanzi_value_site_uv"></span>人</span>
+	  <span class="point"> . </span>
 	  <span>谢谢HyG提供的主题</span>
       </div>
     </div>
@@ -30,3 +31,4 @@
 </footer>
 	<!--<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>-->
 	<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script>
+
