modify pages/3about.md and change the js and css to cdn

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,6 @@
     </div>
   </div>
 </footer>
-	<!--<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>-->
-	<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>
+	<!--<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script>-->
 
