--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
  <!--  <body data-spy="scroll" data-target="#myAffix"> -->
   <body>
+  <canvas id="reactive-bg-canvas"></canvas>
 
     {% include header.html %}
 
