remove canvas temp

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
  <!--  <body data-spy="scroll" data-target="#myAffix"> -->
   <body>
-  <canvas id="reactive-bg-canvas"></canvas>
+<!--  <canvas id="reactive-bg-canvas"></canvas> -->
 
     {% include header.html %}
 
