--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,4 +31,4 @@
 </footer>
 	<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>
 	<!--<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script>-->
-
+	<!--<canvas id="reactive-bg-canvas"></canvas> -->
