--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,7 +3,8 @@
  */
 /* commom */
 body {
-	background-image: url(../pics/canvas_bg.jpg);
+	/*background-image: url(../pics/canvas_bg.jpg);*/
+	background-image: url(../pics/new_bg.jpg);
         font-family: 'Microsoft YaHei', 'Helvetica','Arial','SimHei', sans-serif;
 }
 article p{
