add favicon.ico and change the block style with no enter

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,10 +13,18 @@ article p{
 pre{
 	padding: 0;
 	background: none;
+/* commom word-wrap  */
+        word-wrap: normal!important;
+/* commom */
+
 }
 
 pre code{
 	font-size: 14px;
+/* commom word-wrap  */
+        white-space: pre!important;
+/* commom */
+
 }
 
 table{
