remove convas in  _includes/footer.html because of load speed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
 	<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>
 -->
 	<!--<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script>-->
-	<canvas id="reactive-bg-canvas"></canvas> 
+	<!--<canvas id="reactive-bg-canvas"></canvas> -->
 
 <!-- google-analytics script  --->
 
