--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="{{"/static/js/index.js" | prepend:site.baseurl}}"></script>
 
         <!-- fashion js -->
-	<script type="text/javascript" src="{{"/static/js/beautify.js" | prepend:site.baseurl}}"></script>
+	<!--<script type="text/javascript" src="{{"/static/js/beautify.js" | prepend:site.baseurl}}"></script>-->
 	
 	<!--<link rel="stylesheet" type="text/css" href="{{ "/static/css/monokai_sublime.min.css" | prepend: site.baseurl }}">-->
 	<link rel="stylesheet" type="text/css" href="http://apps.bdimg.com/libs/highlight.js/8.4/styles/monokai_sublime.min.css">
