--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,13 @@
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="stylesheet" href="{{ " /css/fontawesome/css/font-awesome.min.css " | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
+<!-- add hightlight js code
+-->
+<link rel="stylesheet" type="text/css" href="http://apps.bdimg.com/libs/highlight.js/8.4/styles/monokai_sublime.min.css">
+<script type="text/javascript" src="http://apps.bdimg.com/libs/highlight.js/8.4/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<!-- add hightlight js code
+-->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ " /feed.xml " | prepend: site.baseurl | prepend: site.url }}">
 
