--- a/css/main.scss
+++ b/css/main.scss
@@ -61,12 +61,7 @@
         "backToTop"
 ;
 
-// 两个人在列车上相遇
-// 一段旅程充满了诗意
-// 你突然说你要下车
-// 去寻找属于你的灵魂和身体
-//
-// 当你穷的只剩下理想时
-// 就再次回到这列车上
-// 我们谈天说地
-// 把酒言欢，赠予你新路途纹银
+// add auto roll feature 
+pre code {
+  white-space: pre!important;
+}
