--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,4 +45,9 @@
 
     </script>
 {% endif %}
+<!-- UY BEGIN -->
+<!--<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139788"></script>
+-->
+<!-- UY END -->
 </head>
