--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,3 +34,8 @@
     </div>
 </footer>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+	<!--<script type="text/javascript" src="https://cdn.rawgit.com/hustcc/canvas-nest.js/master/canvas-nest.min.js"></script>-->
+	<!--<script type="text/javascript" src="{{"/static/js/canvas-nest.min.js" | prepend:site.baseurl}}"></script> -->
+
+
