--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -72,7 +72,7 @@ window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="tex
 
 
 <!-- UY BEGIN -->
-	<div id="uyan_frame"></div>
-	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139788"></script>
+<!-- 	<div id="uyan_frame"></div>
+	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139788"></script> -->
 <!-- UY END -->
 
